welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:28: error: ')' expected but ';' found.
  mark(colors(offset-1);
                       ^